freesia/k8s/apps/prom-stack-v3/thanos/thanos-store/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanos-store-0
  labels:
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/component: store
    app.kubernetes.io/partition: "0"

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: thanos
      app.kubernetes.io/instance: thanos
      app.kubernetes.io/component: store
      app.kubernetes.io/partition: "0"

  template:
    metadata:
      labels:

        app.kubernetes.io/name: thanos
        app.kubernetes.io/instance: thanos
        app.kubernetes.io/component: store
        app.kubernetes.io/partition: "0"
    spec:
      containers:
      - name: thanos-store
        image: "quay.io/thanos/thanos:v0.17.1"
        imagePullPolicy: IfNotPresent
        args:
        - "store"
        - "--data-dir=/var/thanos/store"
        - "--log.level=info"
        - "--log.format=logfmt"
        - "--http-address=0.0.0.0:10902"
        - "--grpc-address=0.0.0.0:10901"
        - "--objstore.config-file=/etc/config/object-store.yaml"
        - "--index-cache-size=250MB"
        - "--chunk-pool-size=2GB"
        - "--store.grpc.series-max-concurrency=20"
        - "--sync-block-duration=3m"
        - "--block-sync-concurrency=20"
        ports:
        - name: http
          containerPort: 10902
        - name: grpc
          containerPort: 10901
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
          readOnly: true
        - name: data
          mountPath: /var/thanos/store
        resources:
          
          limits:
            cpu: 2000m
            memory: 16Gi
          requests:
            cpu: 1000m
            memory: 4Gi
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: store-data-volume-0
      - name: config-volume
        secret:
          secretName: "thanos-bucket-config"
