freesia/k8s/apps/prom-stack-v3/thanos/thanos-store/service-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-store-http
  labels:
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/component: store

spec:
  type: ClusterIP
  ports:
    - port: 10902
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/component: store
